[tool.poetry]
name = "turbozero"
version = "0.1.0"
description = "vectorized alphazero/mcts in JAX"
authors = ["lowrollr <92640744+lowrollr@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "core" }
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jorenham/jax_pep503"
url = "https://jorenham.github.io/jax_pep503/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.9"
jax = {extras=["cpu"], version="^0.4.23"}
flax = "^0.7.5"
optax = "^0.1.8"
orbax = "^0.1.9"
chex = "^0.1.85"
graphviz = "^0.20.1"
wandb = "^0.16.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
jax = {extras=["cuda12_pip"], version="^0.4.23"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
