[tool.poetry]
name = "turbozero"
version = "0.1.1"
description = "vectorized alphazero/mcts in JAX"
authors = ["lowrollr <92640744+lowrollr@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "core" }
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"
wandb = "^0.18.6"
jax = "0.4.35"
jaxlib = "^0.4.34"
flax = "^0.8.4"
optax = "^0.1.8"
orbax-checkpoint = "^0.10.1"
chex = "^0.1.85"
pgx = "^2.0.1"
dm-haiku = "^0.0.12"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
